Fixed spacing

--- a/app/assets/stylesheets/components/containers.scss
+++ b/app/assets/stylesheets/components/containers.scss
@@ -1,5 +1,6 @@
 .skinny-container {
   margin: 0 auto;
+  padding-bottom: 30px;
   width: 700px;
   max-width: 100%;
 }
